ADD: add utils, update.  fix sql ssn - integer casting

--- a/settings.ini
+++ b/settings.ini
@@ -2,6 +2,10 @@
 DEBUG=True
 LOGFILE=systemdat.log
 
+; Configure test_parameters
+BIGQUERY_TEST_TABLE=ut-dws-udrc-dev.ADHOC.GRADUATES_002D66FA-300A-4018-814F-A68E07D811A1
+BIGQUERY_TEST_PREPROCESSED_TABLE=ut-dws-udrc-dev.ADHOC.GRADUATES_002D66FA-300A-4018-814F-A68E07D811A1_preprocessed_DEBUG_5
+
 ; Configure GCP Information (if not provided by CLI)
 
 
@@ -9,7 +13,8 @@ LOGFILE=systemdat.log
 
 
 ; Configure MPI Indexing
-
+FIRESTORE_IDENTITY_POOL=hackathon_pool
+GCS_BUCKET_NAME=hackathon-mpi-bucket
 
 ; Configure MPI Comparisons
 
