UPD: constructors for nosql model.

--- a/settings.ini
+++ b/settings.ini
@@ -1,6 +1,7 @@
 [settings]
 DEBUG=True
 LOGFILE=systemdat.log
+ALLOWED_PII=first_name,last_name,ssn,ssid,middle_name,ushe_student_id,usbe_student_id,gender,ethnicity,birth_date
 
 ; Configure test_parameters
 BIGQUERY_TEST_TABLE=ut-dws-udrc-dev.ADHOC.GRADUATES_002D66FA-300A-4018-814F-A68E07D811A1
