ADD: Context model object and associated marshal tests

--- a/settings.ini
+++ b/settings.ini
@@ -8,7 +8,7 @@ BIGQUERY_TEST_TABLE=ut-dws-udrc-dev.ADHOC.GRADUATES_002D66FA-300A-4018-814F-A68E
 BIGQUERY_TEST_PREPROCESSED_TABLE=ut-dws-udrc-dev.ADHOC.GRADUATES_002D66FA-300A-4018-814F-A68E07D811A1_preprocessed_DEBUG_5
 
 ; Configure GCP Information (if not provided by CLI)
-
+MPI_SERVICE_SECRET_NAME=projects/319293654677/secrets/mpi-sa-key/versions/latest
 
 ; Configure MPI Preprocessing
 
