--- a/pytest.ini
+++ b/pytest.ini
@@ -1,1 +1,4 @@
 [pytest]
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    incremental: marks test as incremental (run test classes in sequence)
