UPD: updated config to run larger preprocessed table - readying for streaming to firestore test. Issue - logging shut down for some reason

--- a/settings.ini
+++ b/settings.ini
@@ -1,11 +1,14 @@
 [settings]
 DEBUG=True
 LOGFILE=systemdat.log
-ALLOWED_PII=first_name,last_name,ssn,ssid,middle_name,ushe_student_id,usbe_student_id,gender,ethnicity,birth_date
+ALLOWED_PII=first_name,last_name,ssn,ssid,middle_name,ushe_student_id,usbe_student_id,ustc_student_id,gender,ethnicity,birth_date
 
 ; Configure test_parameters
 BIGQUERY_TEST_TABLE=ut-dws-udrc-dev.ADHOC.GRADUATES_002D66FA-300A-4018-814F-A68E07D811A1
 BIGQUERY_TEST_PREPROCESSED_TABLE=ut-dws-udrc-dev.ADHOC.GRADUATES_002D66FA-300A-4018-814F-A68E07D811A1_preprocessed_DEBUG_5
+
+BIGQUERY_LARGE=ut-dws-udrc-dev.ADHOC.FIFTEEN_MILL_4B9A55F1-768F-4D50-AF3E-07B97F5CADC5
+BIGQUERY_LARGE_PREPROCESSED=ut-dws-udrc-dev.ADHOC.FIFTEEN_MILL_4B9A55F1-768F-4D50-AF3E-07B97F5CADC5_preprocessed_DEBUG_12
 
 ; Configure GCP Information (if not provided by CLI)
 MPI_SERVICE_SECRET_NAME=projects/319293654677/secrets/mpi-sa-key/versions/latest
