FIX: batch add is working.  update will have to wait to test.  Massive imporovement ~100/s/thread

--- a/settings.ini
+++ b/settings.ini
@@ -17,6 +17,7 @@ MPI_SERVICE_SECRET_NAME=projects/319293654677/secrets/mpi-sa-key/versions/latest
 
 
 ; Configure MPI Indexing
+MPI_VECTORS_TABLE=ut-dws-udrc-dev.MPI.mpi_vectors
 FIRESTORE_IDENTITY_POOL=hackathon_pool
 GCS_BUCKET_NAME=hackathon-mpi-bucket
 
