ADD/UPD: Added firestore to bigquery pipeline components and updated doc model to contain 'updated' field

--- a/settings.ini
+++ b/settings.ini
@@ -11,6 +11,7 @@ BIGQUERY_LARGE=ut-dws-udrc-dev.ADHOC.FIFTEEN_MILL_4B9A55F1-768F-4D50-AF3E-07B97F
 BIGQUERY_LARGE_PREPROCESSED=ut-dws-udrc-dev.ADHOC.FIFTEEN_MILL_4B9A55F1-768F-4D50-AF3E-07B97F5CADC5_preprocessed_DEBUG_12
 
 ; Configure GCP Information (if not provided by CLI)
+GCP_PROJECT_ID=ut-dws-udrc-dev
 MPI_SERVICE_SECRET_NAME=projects/319293654677/secrets/mpi-sa-key/versions/latest
 
 ; Configure MPI Preprocessing
