--- a/deployment/pipeline_preprocess_preprocess_table/Dockerfile
+++ b/deployment/pipeline_preprocess_preprocess_table/Dockerfile
@@ -4,9 +4,10 @@ ARG WORKDIR=/dataflow/template
 RUN mkdir -p ${WORKDIR}
 WORKDIR ${WORKDIR}
 
-COPY . ${WORKDIR}
+RUN ls -la
+COPY . .
 
-ENV FLEX_TEMPLATE_PYTHON_REQUIREMENTS_FILE="${WORKDIR}/config/requirements.txt"
+ENV FLEX_TEMPLATE_PYTHON_REQUIREMENTS_FILE="${WORKDIR}/requirements.txt"
 ENV FLEX_TEMPLATE_PYTHON_PY_FILE="${WORKDIR}/pipeline_preprocess_preprocess_table.py"
 
 RUN python ${WORKDIR}/setup.py
